--- a/prometheus.yml
+++ b/prometheus.yml
@@ -8,4 +8,4 @@ scrape_configs:
 
   - job_name: "node_exporter"
     static_configs:
-      - targets: ["localhost:9100"]
+      - targets: ["142.93.37.197:9100"]
